Bug 69183 - EDITING: insert a table with ctrl-v changes the formating of the table and the following Paragraph
Summary: EDITING: insert a table with ctrl-v changes the formating of the table and th...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Matt K
URL:
Whiteboard: BSA target:24.2.0
Keywords: easyHack, skillCpp, topicUI
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2013-09-10 15:59 UTC by Ricard
Modified: 2024-02-04 00:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document with the scenario mencioned obove (13.07 KB, application/vnd.oasis.opendocument.text)
2013-09-10 15:59 UTC, Ricard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ricard 2013-09-10 15:59:28 UTC
Created attachment 85574 [details]
document with the scenario mencioned obove

Problem description: 
I have made a table in the Text and like to copy it to other places in the text.
When I have the formatting of an list and I insert the table with coy and paste, the the formatting inside the table also gets the list- formatting.
Second thing is that the following paragraph, if it is a chapter wit number also gets the list-formatting
Please view the document which I added.
This problem is kown in the 3.x versions and also in the 4.0 versions.
I get the same behavour with Ubuntu and windows version.

Steps to reproduce:
1. make a tabe in the text.
2. copy it to the clipboard
3. make to new paragraphs. 
4. the first mark as list
5. the second make as heading1.
6.in the menu extra-chapternumbring put tthe formatting for the heading1 that it shows the number of the chapter.
7. put the curswor in the line with the list and insert the table of the clipboard.


Current behavior:
the tableformatting has changed to list and the following paragraph is now a list.

Expected behavior:
the table should be inserted as is, without changing the format, nither inside the table or any other paragraph.
Adicional information:
Same happens when I have a Bulled-list and a numbered list in the following line and I insert the table in the Bulle-List. (see added document)



              
Operating System: Ubuntu
Version: 4.1.1.2 rc
Comment 1 Ricard 2013-09-10 16:59:05 UTC
*** Bug 69185 has been marked as a duplicate of this bug. ***
Comment 2 Mike Kaganski 2013-09-17 08:53:39 UTC
Reproducible with 4.1.2.1 and AOO 4.0 under Win7x64 - an inherited problem.
Comment 3 QA Administrators 2015-04-01 14:41:17 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2015-04-23 12:37:04 UTC
Still repro.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: f3375fa07f27bd2ade519af3c07d69040d10eaa9
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-22_23:38:50
Locale: fi_FI
Comment 5 Mike Kaganski 2015-05-11 05:16:48 UTC
Code pointer:
sw/source/core/frmedt/fecopy.cxx
bool SwFEShell::Paste( SwDoc* pClpDoc, bool bIncludingPageFrames )
line~1043
> bool bStartWithTable = 0 != aCpyPam.Start()->nNode.GetNode().FindTableNode();
Comment 6 QA Administrators 2016-09-20 09:42:44 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2019-12-03 14:12:11 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2021-12-03 04:29:43 UTC Comment hidden (obsolete)
Comment 9 Heiko Tietze 2022-03-18 09:47:30 UTC
Potential easyhack as of comment 5
Comment 10 Matt K 2023-07-06 22:58:50 UTC
Fix is tracked in https://gerrit.libreoffice.org/c/core/+/154149.  Added Mike to the review.
Comment 11 Commit Notification 2023-07-07 09:01:14 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6d30ef2d9418ff6d2bd89c20a61c757bc3abb9b2

tdf#69183 Pasting a table in Writer no longer inherits list formatting

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.