tdf#69183 Pasting a table in Writer no longer inherits list formatting

The entry point of the paste is in SwFEShell::Paste as stated in
the bug comments.  This code calls
"rClpDoc.getIDocumentContentOperations().CopyRange" which calls
"DocumentContentOperationsManager::CopyImplImpl".  In that
function, there is a check for whether to propagate the
formatting of a previous list in the document.  All we do is
add a check there to see if additionally it is a table we
are pasting, and if so to ignore propagating the list format.

Change-Id: I655f54c4df44385fc82976b37d3e21b5fabf45ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154149
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>